--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
   <div class="columns is-centered">
     <div class="box column is-one-third">
      <h1 class="title has-text-centered">Typing Challenge</h1>
-     <p class="has-text-centered">Lorem ipsum dolor sit amet</p>
+     <p class="has-text-centered">{{ randomText }}</p>
      <div class="field">
-      <input class="input" />
+      <input class="input" (input)="onInput($event)" />
      </div>
-     <div class="box has-text-centered">
+     <div class="box has-text-centered" *ngIf="enteredText === randomText">
       <h1 class="title">You win!</h1>
      </div>
     </div>
   </div>
-</div> 
+</div>
