--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,14 @@
   <div class="columns is-centered">
     <div class="box column is-one-third">
      <h1 class="title has-text-centered">Typing Challenge</h1>
-     <p class="has-text-centered">{{ randomText }}</p>
+     <p class="has-text-centered">
+       <span [class]="compare(letter, enteredText[i])" *ngFor="let letter of randomText.split(''); let i = index;">{{ letter }}</span>
+     </p>
      <div class="field">
       <input class="input" (input)="onInput($event)" />
      </div>
      <div class="box has-text-centered" *ngIf="enteredText === randomText">
-      <h1 class="title">You win!</h1>
+      <h1 class="title">Success!</h1>
      </div>
     </div>
   </div>
